<resources>
    <string name="app_name">MyApp</string>
    <string name="news">News</string>
    <string name="for_you">For you</string>
    <string name="trending">Trending</string>
    <string name="global">Global</string>
    <string name="conversas">conversas\n</string>
    <string name="status">status</string>
    <string name="comunidades">comunidades</string>
    <string name="ligações">ligaões\n</string>
</resources>