<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mNews"
        android:icon="@drawable/baseline_library_books"
        android:title="@string/news"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mGlobal"
        android:icon="@drawable/baseline_language"
        android:title="@string/global"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mForyou"
        android:icon="@color/cardview_shadow_start_color"
        android:title="@string/for_you"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mTrending"
        android:icon="@drawable/baseline_book"
        android:title="@string/trending"
        app:showAsAction="ifRoom" />
</menu>