<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mConversas"
        android:icon="@drawable/baseline_mode_comment"
        android:title="@string/conversas"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mStatus"
        android:icon="@drawable/baseline_update"
        android:title="@string/status"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mComunidades"
        android:icon="@drawable/baseline_people_outline"
        android:title="@string/comunidades"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mTrending"
        android:icon="@drawable/baseline_book"
        android:title="@string/trending"
        app:showAsAction="ifRoom" />
</menu>